parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    PUNTO
    CHAR
    ENTONCES
    MIENTRAS
    PARA
    CLASE
    FUNCION
    BOOL
    VERDADERO
    FALSO
    REGRESA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID SEMICOLON main FIN
Rule 2     programa -> PROGRAMA ID SEMICOLON vars main FIN
Rule 3     main -> PRINCIPAL LPARENT RPARENT bloque
Rule 4     vars -> VAR vars2
Rule 5     vars2 -> vars3 COLON tipo SEMICOLON vars2
Rule 6     vars2 -> vars3 COLON tipo SEMICOLON
Rule 7     vars3 -> ID
Rule 8     vars3 -> ID COMA vars3
Rule 9     tipo -> INT
Rule 10    tipo -> FLOAT
Rule 11    bloque -> LBRACE estatuto2 RBRACE
Rule 12    bloque -> LBRACE RBRACE
Rule 13    estatuto2 -> estatuto
Rule 14    estatuto2 -> estatuto2 estatuto
Rule 15    estatuto -> asignacion
Rule 16    estatuto -> condicion
Rule 17    estatuto -> escritura
Rule 18    estatuto -> lectura
Rule 19    asignacion -> ID IGUAL expresion SEMICOLON
Rule 20    condicion -> COND_SI LPARENT expresion RPARENT bloque SEMICOLON
Rule 21    condicion -> COND_SI LPARENT expresion RPARENT bloque COND_SINO bloque SEMICOLON
Rule 22    escritura -> IMPRIME LPARENT escrituraGrammar RPARENT SEMICOLON
Rule 23    escrituraGrammar -> expresion
Rule 24    escrituraGrammar -> expresion COMA escrituraGrammar
Rule 25    escrituraGrammar -> varcte
Rule 26    escrituraGrammar -> varcte COMA escrituraGrammar
Rule 27    lectura -> LEE LPARENT varcte RPARENT SEMICOLON
Rule 28    expresion -> exp
Rule 29    expresion -> exp MAYOR_QUE exp
Rule 30    expresion -> exp MENOR_QUE exp
Rule 31    expresion -> exp DIFERENTE_A exp
Rule 32    exp -> termino
Rule 33    exp -> termino exp2
Rule 34    exp2 -> MAS exp
Rule 35    exp2 -> MENOS exp
Rule 36    termino -> factor
Rule 37    termino -> factor termino2
Rule 38    termino2 -> POR termino
Rule 39    termino2 -> DIVIDE termino
Rule 40    factor -> LPARENT expresion RPARENT
Rule 41    factor -> MAS varcte
Rule 42    factor -> MENOS varcte
Rule 43    factor -> varcte
Rule 44    varcte -> ID
Rule 45    varcte -> CTEFLOAT
Rule 46    varcte -> CTEINT
Rule 47    varcte -> STRING
Rule 48    vacio -> <empty>

Terminals, with rules where they appear

BOOL                 : 
CHAR                 : 
CLASE                : 
COLON                : 5 6
COMA                 : 8 24 26
COND_SI              : 20 21
COND_SINO            : 21
CTEFLOAT             : 45
CTEINT               : 46
DIFERENTE_A          : 31
DIVIDE               : 39
ENTONCES             : 
FALSO                : 
FIN                  : 1 2
FLOAT                : 10
FUNCION              : 
ID                   : 1 2 7 8 19 44
IGUAL                : 19
IMPRIME              : 22
INT                  : 9
LBRACE               : 11 12
LEE                  : 27
LPARENT              : 3 20 21 22 27 40
MAS                  : 34 41
MAYOR_QUE            : 29
MENOR_QUE            : 30
MENOS                : 35 42
MIENTRAS             : 
PARA                 : 
POR                  : 38
PRINCIPAL            : 3
PROGRAMA             : 1 2
PUNTO                : 
RBRACE               : 11 12
REGRESA              : 
RPARENT              : 3 20 21 22 27 40
SEMICOLON            : 1 2 5 6 19 20 21 22 27
STRING               : 47
VAR                  : 4
VERDADERO            : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 15
bloque               : 3 20 21 21
condicion            : 16
escritura            : 17
escrituraGrammar     : 22 24 26
estatuto             : 13 14
estatuto2            : 11 14
exp                  : 28 29 29 30 30 31 31 34 35
exp2                 : 33
expresion            : 19 20 21 23 24 40
factor               : 36 37
lectura              : 18
main                 : 1 2
programa             : 0
termino              : 32 33 38 39
termino2             : 37
tipo                 : 5 6
vacio                : 
varcte               : 25 26 27 41 42 43
vars                 : 2
vars2                : 4 5
vars3                : 5 6 8

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID SEMICOLON main FIN
    (2) programa -> . PROGRAMA ID SEMICOLON vars main FIN

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID SEMICOLON main FIN
    (2) programa -> PROGRAMA . ID SEMICOLON vars main FIN

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . SEMICOLON main FIN
    (2) programa -> PROGRAMA ID . SEMICOLON vars main FIN

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID SEMICOLON . main FIN
    (2) programa -> PROGRAMA ID SEMICOLON . vars main FIN
    (3) main -> . PRINCIPAL LPARENT RPARENT bloque
    (4) vars -> . VAR vars2

    PRINCIPAL       shift and go to state 7
    VAR             shift and go to state 8

    main                           shift and go to state 5
    vars                           shift and go to state 6

state 5

    (1) programa -> PROGRAMA ID SEMICOLON main . FIN

    FIN             shift and go to state 9


state 6

    (2) programa -> PROGRAMA ID SEMICOLON vars . main FIN
    (3) main -> . PRINCIPAL LPARENT RPARENT bloque

    PRINCIPAL       shift and go to state 7

    main                           shift and go to state 10

state 7

    (3) main -> PRINCIPAL . LPARENT RPARENT bloque

    LPARENT         shift and go to state 11


state 8

    (4) vars -> VAR . vars2
    (5) vars2 -> . vars3 COLON tipo SEMICOLON vars2
    (6) vars2 -> . vars3 COLON tipo SEMICOLON
    (7) vars3 -> . ID
    (8) vars3 -> . ID COMA vars3

    ID              shift and go to state 14

    vars2                          shift and go to state 12
    vars3                          shift and go to state 13

state 9

    (1) programa -> PROGRAMA ID SEMICOLON main FIN .

    $end            reduce using rule 1 (programa -> PROGRAMA ID SEMICOLON main FIN .)


state 10

    (2) programa -> PROGRAMA ID SEMICOLON vars main . FIN

    FIN             shift and go to state 15


state 11

    (3) main -> PRINCIPAL LPARENT . RPARENT bloque

    RPARENT         shift and go to state 16


state 12

    (4) vars -> VAR vars2 .

    PRINCIPAL       reduce using rule 4 (vars -> VAR vars2 .)


state 13

    (5) vars2 -> vars3 . COLON tipo SEMICOLON vars2
    (6) vars2 -> vars3 . COLON tipo SEMICOLON

    COLON           shift and go to state 17


state 14

    (7) vars3 -> ID .
    (8) vars3 -> ID . COMA vars3

    COLON           reduce using rule 7 (vars3 -> ID .)
    COMA            shift and go to state 18


state 15

    (2) programa -> PROGRAMA ID SEMICOLON vars main FIN .

    $end            reduce using rule 2 (programa -> PROGRAMA ID SEMICOLON vars main FIN .)


state 16

    (3) main -> PRINCIPAL LPARENT RPARENT . bloque
    (11) bloque -> . LBRACE estatuto2 RBRACE
    (12) bloque -> . LBRACE RBRACE

    LBRACE          shift and go to state 20

    bloque                         shift and go to state 19

state 17

    (5) vars2 -> vars3 COLON . tipo SEMICOLON vars2
    (6) vars2 -> vars3 COLON . tipo SEMICOLON
    (9) tipo -> . INT
    (10) tipo -> . FLOAT

    INT             shift and go to state 22
    FLOAT           shift and go to state 23

    tipo                           shift and go to state 21

state 18

    (8) vars3 -> ID COMA . vars3
    (7) vars3 -> . ID
    (8) vars3 -> . ID COMA vars3

    ID              shift and go to state 14

    vars3                          shift and go to state 24

state 19

    (3) main -> PRINCIPAL LPARENT RPARENT bloque .

    FIN             reduce using rule 3 (main -> PRINCIPAL LPARENT RPARENT bloque .)


state 20

    (11) bloque -> LBRACE . estatuto2 RBRACE
    (12) bloque -> LBRACE . RBRACE
    (13) estatuto2 -> . estatuto
    (14) estatuto2 -> . estatuto2 estatuto
    (15) estatuto -> . asignacion
    (16) estatuto -> . condicion
    (17) estatuto -> . escritura
    (18) estatuto -> . lectura
    (19) asignacion -> . ID IGUAL expresion SEMICOLON
    (20) condicion -> . COND_SI LPARENT expresion RPARENT bloque SEMICOLON
    (21) condicion -> . COND_SI LPARENT expresion RPARENT bloque COND_SINO bloque SEMICOLON
    (22) escritura -> . IMPRIME LPARENT escrituraGrammar RPARENT SEMICOLON
    (27) lectura -> . LEE LPARENT varcte RPARENT SEMICOLON

    RBRACE          shift and go to state 26
    ID              shift and go to state 32
    COND_SI         shift and go to state 33
    IMPRIME         shift and go to state 34
    LEE             shift and go to state 35

    estatuto2                      shift and go to state 25
    estatuto                       shift and go to state 27
    asignacion                     shift and go to state 28
    condicion                      shift and go to state 29
    escritura                      shift and go to state 30
    lectura                        shift and go to state 31

state 21

    (5) vars2 -> vars3 COLON tipo . SEMICOLON vars2
    (6) vars2 -> vars3 COLON tipo . SEMICOLON

    SEMICOLON       shift and go to state 36


state 22

    (9) tipo -> INT .

    SEMICOLON       reduce using rule 9 (tipo -> INT .)


state 23

    (10) tipo -> FLOAT .

    SEMICOLON       reduce using rule 10 (tipo -> FLOAT .)


state 24

    (8) vars3 -> ID COMA vars3 .

    COLON           reduce using rule 8 (vars3 -> ID COMA vars3 .)


state 25

    (11) bloque -> LBRACE estatuto2 . RBRACE
    (14) estatuto2 -> estatuto2 . estatuto
    (15) estatuto -> . asignacion
    (16) estatuto -> . condicion
    (17) estatuto -> . escritura
    (18) estatuto -> . lectura
    (19) asignacion -> . ID IGUAL expresion SEMICOLON
    (20) condicion -> . COND_SI LPARENT expresion RPARENT bloque SEMICOLON
    (21) condicion -> . COND_SI LPARENT expresion RPARENT bloque COND_SINO bloque SEMICOLON
    (22) escritura -> . IMPRIME LPARENT escrituraGrammar RPARENT SEMICOLON
    (27) lectura -> . LEE LPARENT varcte RPARENT SEMICOLON

    RBRACE          shift and go to state 37
    ID              shift and go to state 32
    COND_SI         shift and go to state 33
    IMPRIME         shift and go to state 34
    LEE             shift and go to state 35

    estatuto                       shift and go to state 38
    asignacion                     shift and go to state 28
    condicion                      shift and go to state 29
    escritura                      shift and go to state 30
    lectura                        shift and go to state 31

state 26

    (12) bloque -> LBRACE RBRACE .

    FIN             reduce using rule 12 (bloque -> LBRACE RBRACE .)
    SEMICOLON       reduce using rule 12 (bloque -> LBRACE RBRACE .)
    COND_SINO       reduce using rule 12 (bloque -> LBRACE RBRACE .)


state 27

    (13) estatuto2 -> estatuto .

    RBRACE          reduce using rule 13 (estatuto2 -> estatuto .)
    ID              reduce using rule 13 (estatuto2 -> estatuto .)
    COND_SI         reduce using rule 13 (estatuto2 -> estatuto .)
    IMPRIME         reduce using rule 13 (estatuto2 -> estatuto .)
    LEE             reduce using rule 13 (estatuto2 -> estatuto .)


state 28

    (15) estatuto -> asignacion .

    RBRACE          reduce using rule 15 (estatuto -> asignacion .)
    ID              reduce using rule 15 (estatuto -> asignacion .)
    COND_SI         reduce using rule 15 (estatuto -> asignacion .)
    IMPRIME         reduce using rule 15 (estatuto -> asignacion .)
    LEE             reduce using rule 15 (estatuto -> asignacion .)


state 29

    (16) estatuto -> condicion .

    RBRACE          reduce using rule 16 (estatuto -> condicion .)
    ID              reduce using rule 16 (estatuto -> condicion .)
    COND_SI         reduce using rule 16 (estatuto -> condicion .)
    IMPRIME         reduce using rule 16 (estatuto -> condicion .)
    LEE             reduce using rule 16 (estatuto -> condicion .)


state 30

    (17) estatuto -> escritura .

    RBRACE          reduce using rule 17 (estatuto -> escritura .)
    ID              reduce using rule 17 (estatuto -> escritura .)
    COND_SI         reduce using rule 17 (estatuto -> escritura .)
    IMPRIME         reduce using rule 17 (estatuto -> escritura .)
    LEE             reduce using rule 17 (estatuto -> escritura .)


state 31

    (18) estatuto -> lectura .

    RBRACE          reduce using rule 18 (estatuto -> lectura .)
    ID              reduce using rule 18 (estatuto -> lectura .)
    COND_SI         reduce using rule 18 (estatuto -> lectura .)
    IMPRIME         reduce using rule 18 (estatuto -> lectura .)
    LEE             reduce using rule 18 (estatuto -> lectura .)


state 32

    (19) asignacion -> ID . IGUAL expresion SEMICOLON

    IGUAL           shift and go to state 39


state 33

    (20) condicion -> COND_SI . LPARENT expresion RPARENT bloque SEMICOLON
    (21) condicion -> COND_SI . LPARENT expresion RPARENT bloque COND_SINO bloque SEMICOLON

    LPARENT         shift and go to state 40


state 34

    (22) escritura -> IMPRIME . LPARENT escrituraGrammar RPARENT SEMICOLON

    LPARENT         shift and go to state 41


state 35

    (27) lectura -> LEE . LPARENT varcte RPARENT SEMICOLON

    LPARENT         shift and go to state 42


state 36

    (5) vars2 -> vars3 COLON tipo SEMICOLON . vars2
    (6) vars2 -> vars3 COLON tipo SEMICOLON .
    (5) vars2 -> . vars3 COLON tipo SEMICOLON vars2
    (6) vars2 -> . vars3 COLON tipo SEMICOLON
    (7) vars3 -> . ID
    (8) vars3 -> . ID COMA vars3

    PRINCIPAL       reduce using rule 6 (vars2 -> vars3 COLON tipo SEMICOLON .)
    ID              shift and go to state 14

    vars3                          shift and go to state 13
    vars2                          shift and go to state 43

state 37

    (11) bloque -> LBRACE estatuto2 RBRACE .

    FIN             reduce using rule 11 (bloque -> LBRACE estatuto2 RBRACE .)
    SEMICOLON       reduce using rule 11 (bloque -> LBRACE estatuto2 RBRACE .)
    COND_SINO       reduce using rule 11 (bloque -> LBRACE estatuto2 RBRACE .)


state 38

    (14) estatuto2 -> estatuto2 estatuto .

    RBRACE          reduce using rule 14 (estatuto2 -> estatuto2 estatuto .)
    ID              reduce using rule 14 (estatuto2 -> estatuto2 estatuto .)
    COND_SI         reduce using rule 14 (estatuto2 -> estatuto2 estatuto .)
    IMPRIME         reduce using rule 14 (estatuto2 -> estatuto2 estatuto .)
    LEE             reduce using rule 14 (estatuto2 -> estatuto2 estatuto .)


state 39

    (19) asignacion -> ID IGUAL . expresion SEMICOLON
    (28) expresion -> . exp
    (29) expresion -> . exp MAYOR_QUE exp
    (30) expresion -> . exp MENOR_QUE exp
    (31) expresion -> . exp DIFERENTE_A exp
    (32) exp -> . termino
    (33) exp -> . termino exp2
    (36) termino -> . factor
    (37) termino -> . factor termino2
    (40) factor -> . LPARENT expresion RPARENT
    (41) factor -> . MAS varcte
    (42) factor -> . MENOS varcte
    (43) factor -> . varcte
    (44) varcte -> . ID
    (45) varcte -> . CTEFLOAT
    (46) varcte -> . CTEINT
    (47) varcte -> . STRING

    LPARENT         shift and go to state 49
    MAS             shift and go to state 50
    MENOS           shift and go to state 52
    ID              shift and go to state 44
    CTEFLOAT        shift and go to state 53
    CTEINT          shift and go to state 54
    STRING          shift and go to state 55

    expresion                      shift and go to state 45
    exp                            shift and go to state 46
    termino                        shift and go to state 47
    factor                         shift and go to state 48
    varcte                         shift and go to state 51

state 40

    (20) condicion -> COND_SI LPARENT . expresion RPARENT bloque SEMICOLON
    (21) condicion -> COND_SI LPARENT . expresion RPARENT bloque COND_SINO bloque SEMICOLON
    (28) expresion -> . exp
    (29) expresion -> . exp MAYOR_QUE exp
    (30) expresion -> . exp MENOR_QUE exp
    (31) expresion -> . exp DIFERENTE_A exp
    (32) exp -> . termino
    (33) exp -> . termino exp2
    (36) termino -> . factor
    (37) termino -> . factor termino2
    (40) factor -> . LPARENT expresion RPARENT
    (41) factor -> . MAS varcte
    (42) factor -> . MENOS varcte
    (43) factor -> . varcte
    (44) varcte -> . ID
    (45) varcte -> . CTEFLOAT
    (46) varcte -> . CTEINT
    (47) varcte -> . STRING

    LPARENT         shift and go to state 49
    MAS             shift and go to state 50
    MENOS           shift and go to state 52
    ID              shift and go to state 44
    CTEFLOAT        shift and go to state 53
    CTEINT          shift and go to state 54
    STRING          shift and go to state 55

    expresion                      shift and go to state 56
    exp                            shift and go to state 46
    termino                        shift and go to state 47
    factor                         shift and go to state 48
    varcte                         shift and go to state 51

state 41

    (22) escritura -> IMPRIME LPARENT . escrituraGrammar RPARENT SEMICOLON
    (23) escrituraGrammar -> . expresion
    (24) escrituraGrammar -> . expresion COMA escrituraGrammar
    (25) escrituraGrammar -> . varcte
    (26) escrituraGrammar -> . varcte COMA escrituraGrammar
    (28) expresion -> . exp
    (29) expresion -> . exp MAYOR_QUE exp
    (30) expresion -> . exp MENOR_QUE exp
    (31) expresion -> . exp DIFERENTE_A exp
    (44) varcte -> . ID
    (45) varcte -> . CTEFLOAT
    (46) varcte -> . CTEINT
    (47) varcte -> . STRING
    (32) exp -> . termino
    (33) exp -> . termino exp2
    (36) termino -> . factor
    (37) termino -> . factor termino2
    (40) factor -> . LPARENT expresion RPARENT
    (41) factor -> . MAS varcte
    (42) factor -> . MENOS varcte
    (43) factor -> . varcte

    ID              shift and go to state 44
    CTEFLOAT        shift and go to state 53
    CTEINT          shift and go to state 54
    STRING          shift and go to state 55
    LPARENT         shift and go to state 49
    MAS             shift and go to state 50
    MENOS           shift and go to state 52

    escrituraGrammar               shift and go to state 57
    expresion                      shift and go to state 58
    varcte                         shift and go to state 59
    exp                            shift and go to state 46
    termino                        shift and go to state 47
    factor                         shift and go to state 48

state 42

    (27) lectura -> LEE LPARENT . varcte RPARENT SEMICOLON
    (44) varcte -> . ID
    (45) varcte -> . CTEFLOAT
    (46) varcte -> . CTEINT
    (47) varcte -> . STRING

    ID              shift and go to state 44
    CTEFLOAT        shift and go to state 53
    CTEINT          shift and go to state 54
    STRING          shift and go to state 55

    varcte                         shift and go to state 60

state 43

    (5) vars2 -> vars3 COLON tipo SEMICOLON vars2 .

    PRINCIPAL       reduce using rule 5 (vars2 -> vars3 COLON tipo SEMICOLON vars2 .)


state 44

    (44) varcte -> ID .

    POR             reduce using rule 44 (varcte -> ID .)
    DIVIDE          reduce using rule 44 (varcte -> ID .)
    MAS             reduce using rule 44 (varcte -> ID .)
    MENOS           reduce using rule 44 (varcte -> ID .)
    MAYOR_QUE       reduce using rule 44 (varcte -> ID .)
    MENOR_QUE       reduce using rule 44 (varcte -> ID .)
    DIFERENTE_A     reduce using rule 44 (varcte -> ID .)
    SEMICOLON       reduce using rule 44 (varcte -> ID .)
    RPARENT         reduce using rule 44 (varcte -> ID .)
    COMA            reduce using rule 44 (varcte -> ID .)


state 45

    (19) asignacion -> ID IGUAL expresion . SEMICOLON

    SEMICOLON       shift and go to state 61


state 46

    (28) expresion -> exp .
    (29) expresion -> exp . MAYOR_QUE exp
    (30) expresion -> exp . MENOR_QUE exp
    (31) expresion -> exp . DIFERENTE_A exp

    SEMICOLON       reduce using rule 28 (expresion -> exp .)
    RPARENT         reduce using rule 28 (expresion -> exp .)
    COMA            reduce using rule 28 (expresion -> exp .)
    MAYOR_QUE       shift and go to state 62
    MENOR_QUE       shift and go to state 63
    DIFERENTE_A     shift and go to state 64


state 47

    (32) exp -> termino .
    (33) exp -> termino . exp2
    (34) exp2 -> . MAS exp
    (35) exp2 -> . MENOS exp

    MAYOR_QUE       reduce using rule 32 (exp -> termino .)
    MENOR_QUE       reduce using rule 32 (exp -> termino .)
    DIFERENTE_A     reduce using rule 32 (exp -> termino .)
    SEMICOLON       reduce using rule 32 (exp -> termino .)
    RPARENT         reduce using rule 32 (exp -> termino .)
    COMA            reduce using rule 32 (exp -> termino .)
    MAS             shift and go to state 66
    MENOS           shift and go to state 67

    exp2                           shift and go to state 65

state 48

    (36) termino -> factor .
    (37) termino -> factor . termino2
    (38) termino2 -> . POR termino
    (39) termino2 -> . DIVIDE termino

    MAS             reduce using rule 36 (termino -> factor .)
    MENOS           reduce using rule 36 (termino -> factor .)
    MAYOR_QUE       reduce using rule 36 (termino -> factor .)
    MENOR_QUE       reduce using rule 36 (termino -> factor .)
    DIFERENTE_A     reduce using rule 36 (termino -> factor .)
    SEMICOLON       reduce using rule 36 (termino -> factor .)
    RPARENT         reduce using rule 36 (termino -> factor .)
    COMA            reduce using rule 36 (termino -> factor .)
    POR             shift and go to state 69
    DIVIDE          shift and go to state 70

    termino2                       shift and go to state 68

state 49

    (40) factor -> LPARENT . expresion RPARENT
    (28) expresion -> . exp
    (29) expresion -> . exp MAYOR_QUE exp
    (30) expresion -> . exp MENOR_QUE exp
    (31) expresion -> . exp DIFERENTE_A exp
    (32) exp -> . termino
    (33) exp -> . termino exp2
    (36) termino -> . factor
    (37) termino -> . factor termino2
    (40) factor -> . LPARENT expresion RPARENT
    (41) factor -> . MAS varcte
    (42) factor -> . MENOS varcte
    (43) factor -> . varcte
    (44) varcte -> . ID
    (45) varcte -> . CTEFLOAT
    (46) varcte -> . CTEINT
    (47) varcte -> . STRING

    LPARENT         shift and go to state 49
    MAS             shift and go to state 50
    MENOS           shift and go to state 52
    ID              shift and go to state 44
    CTEFLOAT        shift and go to state 53
    CTEINT          shift and go to state 54
    STRING          shift and go to state 55

    expresion                      shift and go to state 71
    exp                            shift and go to state 46
    termino                        shift and go to state 47
    factor                         shift and go to state 48
    varcte                         shift and go to state 51

state 50

    (41) factor -> MAS . varcte
    (44) varcte -> . ID
    (45) varcte -> . CTEFLOAT
    (46) varcte -> . CTEINT
    (47) varcte -> . STRING

    ID              shift and go to state 44
    CTEFLOAT        shift and go to state 53
    CTEINT          shift and go to state 54
    STRING          shift and go to state 55

    varcte                         shift and go to state 72

state 51

    (43) factor -> varcte .

    POR             reduce using rule 43 (factor -> varcte .)
    DIVIDE          reduce using rule 43 (factor -> varcte .)
    MAS             reduce using rule 43 (factor -> varcte .)
    MENOS           reduce using rule 43 (factor -> varcte .)
    MAYOR_QUE       reduce using rule 43 (factor -> varcte .)
    MENOR_QUE       reduce using rule 43 (factor -> varcte .)
    DIFERENTE_A     reduce using rule 43 (factor -> varcte .)
    SEMICOLON       reduce using rule 43 (factor -> varcte .)
    RPARENT         reduce using rule 43 (factor -> varcte .)
    COMA            reduce using rule 43 (factor -> varcte .)


state 52

    (42) factor -> MENOS . varcte
    (44) varcte -> . ID
    (45) varcte -> . CTEFLOAT
    (46) varcte -> . CTEINT
    (47) varcte -> . STRING

    ID              shift and go to state 44
    CTEFLOAT        shift and go to state 53
    CTEINT          shift and go to state 54
    STRING          shift and go to state 55

    varcte                         shift and go to state 73

state 53

    (45) varcte -> CTEFLOAT .

    POR             reduce using rule 45 (varcte -> CTEFLOAT .)
    DIVIDE          reduce using rule 45 (varcte -> CTEFLOAT .)
    MAS             reduce using rule 45 (varcte -> CTEFLOAT .)
    MENOS           reduce using rule 45 (varcte -> CTEFLOAT .)
    MAYOR_QUE       reduce using rule 45 (varcte -> CTEFLOAT .)
    MENOR_QUE       reduce using rule 45 (varcte -> CTEFLOAT .)
    DIFERENTE_A     reduce using rule 45 (varcte -> CTEFLOAT .)
    SEMICOLON       reduce using rule 45 (varcte -> CTEFLOAT .)
    RPARENT         reduce using rule 45 (varcte -> CTEFLOAT .)
    COMA            reduce using rule 45 (varcte -> CTEFLOAT .)


state 54

    (46) varcte -> CTEINT .

    POR             reduce using rule 46 (varcte -> CTEINT .)
    DIVIDE          reduce using rule 46 (varcte -> CTEINT .)
    MAS             reduce using rule 46 (varcte -> CTEINT .)
    MENOS           reduce using rule 46 (varcte -> CTEINT .)
    MAYOR_QUE       reduce using rule 46 (varcte -> CTEINT .)
    MENOR_QUE       reduce using rule 46 (varcte -> CTEINT .)
    DIFERENTE_A     reduce using rule 46 (varcte -> CTEINT .)
    SEMICOLON       reduce using rule 46 (varcte -> CTEINT .)
    RPARENT         reduce using rule 46 (varcte -> CTEINT .)
    COMA            reduce using rule 46 (varcte -> CTEINT .)


state 55

    (47) varcte -> STRING .
